--- a/stylesheets/sass/960.sass
+++ b/stylesheets/sass/960.sass
@@ -1,7 +1,7 @@
 ////
 // Grid >> Global
 
-.grid_1, .grid_2, .grid_3, .grid_4, .grid_5, .grid_6, .grid_7, .grid_8, .grid_9, .grid_10, .grid_11, .grid_12, .grid_13, .grid_14, .grid_15, .grid_16
+.grid-1, .grid-2, .grid-3, .grid-4, .grid-5, .grid-6, .grid-7, .grid-8, .grid-9, .grid-10, .grid-11, .grid-12, .grid-13, .grid-14, .grid-15, .grid-16
   display: inline
   float: left
   position: relative
@@ -20,433 +20,433 @@
 ////
 // Container >> 16 Columns
 
-.container_16
+.container-16
   margin-left: auto
   margin-right: auto
   width: 960px
 
   // Grid >> 16 Columns
 
-  .grid_1
+  .grid-1
     width: 40px
 
-  .grid_2
+  .grid-2
     width: 100px
 
-  .grid_3
+  .grid-3
     width: 160px
 
-  .grid_4
+  .grid-4
     width: 220px
 
-  .grid_5
+  .grid-5
     width: 280px
 
-  .grid_6
+  .grid-6
     width: 340px
 
-  .grid_7
+  .grid-7
     width: 400px
 
-  .grid_8
+  .grid-8
     width: 460px
 
-  .grid_9
+  .grid-9
     width: 520px
 
-  .grid_10
+  .grid-10
     width: 580px
 
-  .grid_11
+  .grid-11
     width: 640px
 
-  .grid_12
+  .grid-12
     width: 700px
 
-  .grid_13
+  .grid-13
     width: 760px
 
-  .grid_14
+  .grid-14
     width: 820px
 
-  .grid_15
+  .grid-15
     width: 880px
 
-  .grid_16
+  .grid-16
     width: 940px
 
   // Prefix Extra Space >> 16 Columns
 
-  .prefix_1
+  .prefix-1
     padding-left: 60px
 
-  .prefix_2
+  .prefix-2
     padding-left: 120px
 
-  .prefix_3
+  .prefix-3
     padding-left: 180px
 
-  .prefix_4
+  .prefix-4
     padding-left: 240px
 
-  .prefix_5
+  .prefix-5
     padding-left: 300px
 
-  .prefix_6
+  .prefix-6
     padding-left: 360px
 
-  .prefix_7
+  .prefix-7
     padding-left: 420px
 
-  .prefix_8
+  .prefix-8
     padding-left: 480px
 
-  .prefix_9
+  .prefix-9
     padding-left: 540px
 
-  .prefix_10
+  .prefix-10
     padding-left: 600px
 
-  .prefix_11
+  .prefix-11
     padding-left: 660px
 
-  .prefix_12
+  .prefix-12
     padding-left: 720px
 
-  .prefix_13
+  .prefix-13
     padding-left: 780px
 
-  .prefix_14
+  .prefix-14
     padding-left: 840px
 
-  .prefix_15
+  .prefix-15
     padding-left: 900px
 
   // Suffix Extra Space >> 16 Columns
 
-  .suffix_1
+  .suffix-1
     padding-right: 60px
 
-  .suffix_2
+  .suffix-2
     padding-right: 120px
 
-  .suffix_3
+  .suffix-3
     padding-right: 180px
 
-  .suffix_4
+  .suffix-4
     padding-right: 240px
 
-  .suffix_5
+  .suffix-5
     padding-right: 300px
 
-  .suffix_6
+  .suffix-6
     padding-right: 360px
 
-  .suffix_7
+  .suffix-7
     padding-right: 420px
 
-  .suffix_8
+  .suffix-8
     padding-right: 480px
 
-  .suffix_9
+  .suffix-9
     padding-right: 540px
 
-  .suffix_10
+  .suffix-10
     padding-right: 600px
 
-  .suffix_11
+  .suffix-11
     padding-right: 660px
 
-  .suffix_12
+  .suffix-12
     padding-right: 720px
 
-  .suffix_13
+  .suffix-13
     padding-right: 780px
 
-  .suffix_14
+  .suffix-14
     padding-right: 840px
 
-  .suffix_15
+  .suffix-15
     padding-right: 900px
 
   // Push Extra Space >> 16 Columns
 
-  .push_1
+  .push-1
     left: 60px
 
-  .push_2
+  .push-2
     left: 120px
 
-  .push_3
+  .push-3
     left: 180px
 
-  .push_4
+  .push-4
     left: 240px
 
-  .push_5
+  .push-5
     left: 300px
 
-  .push_6
+  .push-6
     left: 360px
 
-  .push_7
+  .push-7
     left: 420px
 
-  .push_8
+  .push-8
     left: 480px
 
-  .push_9
+  .push-9
     left: 540px
 
-  .push_10
+  .push-10
     left: 600px
 
-  .push_11
+  .push-11
     left: 660px
 
-  .push_12
+  .push-12
     left: 720px
 
-  .push_13
+  .push-13
     left: 780px
 
-  .push_14
+  .push-14
     left: 840px
 
-  .push_15
+  .push-15
     left: 900px
 
   // Pull Extra Space >> 16 Columns
 
-  .pull_1
+  .pull-1
     left: -60px
 
-  .pull_2
+  .pull-2
     left: -120px
 
-  .pull_3
+  .pull-3
     left: -180px
 
-  .pull_4
+  .pull-4
     left: -240px
 
-  .pull_5
+  .pull-5
     left: -300px
 
-  .pull_6
+  .pull-6
     left: -360px
 
-  .pull_7
+  .pull-7
     left: -420px
 
-  .pull_8
+  .pull-8
     left: -480px
 
-  .pull_9
+  .pull-9
     left: -540px
 
-  .pull_10
+  .pull-10
     left: -600px
 
-  .pull_11
+  .pull-11
     left: -660px
 
-  .pull_12
+  .pull-12
     left: -720px
 
-  .pull_13
+  .pull-13
     left: -780px
 
-  .pull_14
+  .pull-14
     left: -840px
 
-  .pull_15
+  .pull-15
     left: -900px
 
 ////
 // Container >> 12 Columns
 
-.container_12
+.container-12
   margin-left: auto
   margin-right: auto
   width: 960px
 
   // Grid >> 12 Columns
 
-  .grid_1
+  .grid-1
     width: 60px
 
-  .grid_2
+  .grid-2
     width: 140px
 
-  .grid_3
+  .grid-3
     width: 220px
 
-  .grid_4
+  .grid-4
     width: 300px
 
-  .grid_5
+  .grid-5
     width: 380px
 
-  .grid_6
+  .grid-6
     width: 460px
 
-  .grid_7
+  .grid-7
     width: 540px
 
-  .grid_8
+  .grid-8
     width: 620px
 
-  .grid_9
+  .grid-9
     width: 700px
 
-  .grid_10
+  .grid-10
     width: 780px
 
-  .grid_11
+  .grid-11
     width: 860px
 
-  .grid_12
+  .grid-12
     width: 940px
 
   // Prefix Extra Space >> 12 Columns
 
-  .prefix_1
+  .prefix-1
     padding-left: 80px
 
-  .prefix_2
+  .prefix-2
     padding-left: 160px
 
-  .prefix_3
+  .prefix-3
     padding-left: 240px
 
-  .prefix_4
+  .prefix-4
     padding-left: 320px
 
-  .prefix_5
+  .prefix-5
     padding-left: 400px
 
-  .prefix_6
+  .prefix-6
     padding-left: 480px
 
-  .prefix_7
+  .prefix-7
     padding-left: 560px
 
-  .prefix_8
+  .prefix-8
     padding-left: 640px
 
-  .prefix_9
+  .prefix-9
     padding-left: 720px
 
-  .prefix_10
+  .prefix-10
     padding-left: 800px
 
-  .prefix_11
+  .prefix-11
     padding-left: 880px
 
   // Suffix Extra Space >> 12 Columns
 
-  .suffix_1
+  .suffix-1
     padding-right: 80px
 
-  .suffix_2
+  .suffix-2
     padding-right: 160px
 
-  .suffix_3
+  .suffix-3
     padding-right: 240px
 
-  .suffix_4
+  .suffix-4
     padding-right: 320px
 
-  .suffix_5
+  .suffix-5
     padding-right: 400px
 
-  .suffix_6
+  .suffix-6
     padding-right: 480px
 
-  .suffix_7
+  .suffix-7
     padding-right: 560px
 
-  .suffix_8
+  .suffix-8
     padding-right: 640px
 
-  .suffix_9
+  .suffix-9
     padding-right: 720px
 
-  .suffix_10
+  .suffix-10
     padding-right: 800px
 
-  .suffix_11
+  .suffix-11
     padding-right: 880px
 
   // Push Extra Space >> 12 Columns
 
-  .push_1
+  .push-1
     left: 80px
 
-  .push_2
+  .push-2
     left: 160px
 
-  .push_3
+  .push-3
     left: 240px
 
-  .push_4
+  .push-4
     left: 320px
 
-  .push_5
+  .push-5
     left: 400px
 
-  .push_6
+  .push-6
     left: 480px
 
-  .push_7
+  .push-7
     left: 560px
 
-  .push_8
+  .push-8
     left: 640px
 
-  .push_9
+  .push-9
     left: 720px
 
-  .push_10
+  .push-10
     left: 800px
 
-  .push_11
+  .push-11
     left: 880px
 
   // Pull Extra Space >> 12 Columns
 
-  .pull_1
+  .pull-1
     left: -80px
 
-  .pull_2
+  .pull-2
     left: -160px
 
-  .pull_3
+  .pull-3
     left: -240px
 
-  .pull_4
+  .pull-4
     left: -320px
 
-  .pull_5
+  .pull-5
     left: -400px
 
-  .pull_6
+  .pull-6
     left: -480px
 
-  .pull_7
+  .pull-7
     left: -560px
 
-  .pull_8
+  .pull-8
     left: -640px
 
-  .pull_9
+  .pull-9
     left: -720px
 
-  .pull_10
+  .pull-10
     left: -800px
 
-  .pull_11
+  .pull-11
     left: -880px
 
 ////
